--- a/writing/hr-resource-stoch.bib
+++ b/writing/hr-resource-stoch.bib
@@ -5123,3 +5123,239 @@ Version Number: 1},
 	author = {Levins, Richard A.},
 	date = {1974},
 }
+
+@article{gushulak_impacts_2024,
+	title = {Impacts of a century of land‐use change on the eutrophication of large, shallow, prairie Lake Manitoba in relation to adjacent Lake Winnipeg (Manitoba, Canada)},
+	volume = {69},
+	issn = {0046-5070, 1365-2427},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/fwb.14192},
+	doi = {10.1111/fwb.14192},
+	abstract = {Abstract
+            
+              
+                
+                  Evaluation of large lake response to centennial changes in land use and climate can be complicated by high spatial and hydrological complexity within their catchments, particularly in regions of low relief. Furthermore, large lakes can exhibit abrupt changes in structure and function that obscure causes of eutrophication.
+                
+                
+                  We provide the first quantification of historical trends in lake production, cyanobacterial abundance, sediment geochemistry and diatom composition since c. 1800 in Lake Manitoba, the 29th largest lake in the world, and compared them to Lake Winnipeg, a morphologically similar, adjacent basin with a 10‐fold larger catchment and an abrupt increase in production around 1990.
+                
+                
+                  
+                    Before 1900, Lake Manitoba was mesotrophic, with low sedimentary concentrations of carbon, phosphorus, nitrogen, cyanobacteria and algal pigments, as well as assemblages of low‐light‐adapted benthic diatoms. Analysis of pigment time‐series with hierarchical generalised additive models revealed that Lake Manitoba eutrophied during 1900–1930 as a consequence of the development of intensive agriculture within its local catchment, but thereafter exhibited stable cyanobacterial densities with limited expansion of N
+                    2
+                    ‐fixing cyanobacteria despite persistent eutrophication.
+                  
+                
+                
+                  Lake Manitoba did not undergo an abrupt change as seen in Lake Winnipeg.
+                
+                
+                  These findings suggest that catchment size had little influence on water quality degradation and that nutrient influx from proximal agricultural sources was sufficient to initially degrade these large prairie lakes. The abrupt change in Lake Winnipeg around 1990 required additional intensification of local land use that did not occur in the Lake Manitoba catchment.},
+	pages = {47--63},
+	number = {1},
+	journaltitle = {Freshwater Biology},
+	shortjournal = {Freshwater Biology},
+	author = {Gushulak, Cale A. C. and Mezzini, Stefano and Moir, Katherine E. and Simpson, Gavin L. and Bunting, Lynda and Wissel, Björn and Engstrom, Daniel R. and Laird, Kathleen R. and St. Amand, Ann and Cumming, Brian F. and Leavitt, Peter R.},
+	urldate = {2024-02-08},
+	date = {2024-01},
+	langid = {english},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\WCC46YFG\\Gushulak et al. - 2024 - Impacts of a century of land‐use change on the eut.pdf:application/pdf},
+}
+
+@article{marien_timing_2022,
+	title = {Timing leaf senescence: A generalized additive models for location, scale and shape approach},
+	volume = {315},
+	issn = {01681923},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S016819232200017X},
+	doi = {10.1016/j.agrformet.2022.108823},
+	shorttitle = {Timing leaf senescence},
+	pages = {108823},
+	journaltitle = {Agricultural and Forest Meteorology},
+	shortjournal = {Agricultural and Forest Meteorology},
+	author = {Mariën, Bertold and Papadimitriou, Dimitri and Kotilainen, Titta and Zuccarini, Paolo and Dox, Inge and Verlinden, Melanie and Heinecke, Thilo and Mariën, Joachim and Willems, Patrick and Decoster, Mieke and Gascó, Aina and Lange, Holger and Peñuelas, Josep and Campioli, Matteo},
+	urldate = {2024-02-08},
+	date = {2022-03},
+	langid = {english},
+}
+
+@article{bjorndahl_abrupt_2022,
+	title = {Abrupt changes in the physical and biological structure of endorheic upland lakes due to 8‐m lake‐level variation during the 20 $^{\textrm{th}}$ century},
+	volume = {67},
+	issn = {0024-3590, 1939-5590},
+	url = {https://aslopubs.onlinelibrary.wiley.com/doi/10.1002/lno.12054},
+	doi = {10.1002/lno.12054},
+	abstract = {Abstract
+            Climate‐induced variation in lake level can affect physicochemical properties of endorheic lakes, but its consequences for phototrophic production and regime shifts are not well understood. Here, we quantified changes in the abundance and community composition of phototrophs in Kenosee and White Bear lakes, two endorheic basins in the parkland Moose Mountain uplands of southeastern Saskatchewan, Canada, which have experienced {\textgreater} 8 m declines in water level since {\textasciitilde} 1900. We hypothesized that lower water levels and warmer temperatures should manifest as increased abundance of phytoplankton, particularly cyanobacteria, and possibly trigger a regime shift to turbid conditions due to evaporative concentration of nutrients and solutes. High‐resolution analysis of sedimentary pigments revealed an increase in total phototrophic abundance (as β‐carotene) concurrent with lake‐level decline beginning {\textasciitilde} 1930, but demonstrated little directional change in cyanobacteria. Instead, significant increases in obligately anaerobic purple sulfur bacteria (as okenone) occurred in both lakes during {\textasciitilde} 1930–1950, coeval with alterations to light environments and declines in lake level. The presence of okenone suggests that climate‐induced increases in solute concentrations may have favored the formation of novel bacterial habitats where photic and anoxic zones overlapped. Generalized additive models showed that establishment of this unique habitat was likely preceded by increased temporal variance of sulfur bacteria, but not phytoplankton or cyanobacteria, suggesting that this abrupt change to physical lake structure was unique to deep‐water environments. Such climate‐induced shifts may become more frequent in the region due to hydrological stress on lake levels due to warming temperatures across the Northern Great Plains.},
+	pages = {1022--1039},
+	number = {5},
+	journaltitle = {Limnology and Oceanography},
+	shortjournal = {Limnology \& Oceanography},
+	author = {Bjorndahl, Judith A. and Gushulak, Cale A.C. and Mezzini, Stefano and Simpson, Gavin L. and Haig, Heather A. and Leavitt, Peter R. and Finlay, Kerri},
+	urldate = {2024-02-08},
+	date = {2022-05},
+	langid = {english},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\AAID3BWN\\Bjorndahl et al. - 2022 - Abrupt changes in the physical and biological stru.pdf:application/pdf},
+}
+
+@report{noonan_search_2023,
+	title = {The search behavior of terrestrial mammals},
+	url = {http://biorxiv.org/lookup/doi/10.1101/2022.12.31.521874},
+	abstract = {Summary
+          
+            Animals moving through landscapes need to strike a balance between finding sufficient resources to grow and reproduce while minimizing encounters with predators
+            1,2
+            . Because encounter rates are determined by the average distance over which directed motion persists
+            1,3–5
+            , this trade-off should be apparent in individuals’ movement. Using {GPS} data from 1,396 individuals across 62 species of terrestrial mammals, we show how predators maintained directed motion {\textasciitilde}7 times longer than for similarly-sized prey, revealing how prey species must trade off search efficiency against predator encounter rates. Individual search strategies were also modulated by resource abundance, with prey species forced to risk higher predator encounter rates when resources were scarce. These findings highlight the interplay between encounter rates and resource availability in shaping broad patterns mammalian movement strategies.},
+	institution = {Ecology},
+	type = {preprint},
+	author = {Noonan, Michael J. and Martinez-Garcia, Ricardo and Fleming, Christen H. and De Figueiredo, Benjamin Garcia and Ali, Abdullahi H. and Attias, Nina and Belant, Jerrold L. and Beyer, Dean E. and Berteaux, Dominique and Bidner, Laura R. and Boone, Randall and Boutin, Stan and Brito, Jorge and Brown, Michael and Carter, Andrew and Castellanos, Armando and Castellanos, Francisco X. and Chitwood, Colter and Darlington, Siobhan and De La Torre, J. Antonio and Dekker, Jasja and {DePerno}, Chris and Droghini, Amanda and Farhadinia, Mohammad and Fennessy, Julian and Fichtel, Claudia and Ford, Adam and Gill, Ryan and Goheen, Jacob R. and Oliveira-Santos, Luiz Gustavo R. and Hebblewhite, Mark and Hodges, Karen E. and Isbell, Lynne A. and Janssen, René and Kappeler, Peter and Kays, Roland and Kaczensky, Petra and Kauffman, Matthew and {LaPoint}, Scott and Lashley, Marcus Alan and Leimgruber, Peter and Little, Andrew and Macdonald, David W. and Masiaine, Symon and {McBride}, Roy T and Medici, E. Patricia and Mertes, Katherine and Moorman, Chris and Morato, Ronaldo G. and Mourão, Guilherme and Mueller, Thomas and Neilson, Eric W. and Pastorini, Jennifer and Patterson, Bruce D. and Pereira, Javier and Petroelje, Tyler R. and Piecora, Katie and Power, R. John and Rachlow, Janet and Ranglack, Dustin H. and Roshier, David and Safford, Kirk and Scott, Dawn M and Serrouya, Robert and Songer, Melissa and Songsasen, Nucharin and Stabach, Jared and Stacy-Dawes, Jenna and Swingen, Morgan B. and Thompson, Jeffrey and Tucker, Marlee A. and Velilla, Marianella and Yarnell, Richard W. and Young, Julie and Fagan, William F. and Calabrese, Justin M.},
+	urldate = {2024-02-13},
+	date = {2023-01-03},
+	langid = {english},
+	doi = {10.1101/2022.12.31.521874},
+	file = {Submitted Version:C\:\\Users\\stefa\\Zotero\\storage\\E9FWMN7D\\Noonan et al. - 2023 - The search behavior of terrestrial mammals.pdf:application/pdf},
+}
+
+@article{merkle_large_2016,
+	title = {Large herbivores surf waves of green-up during spring},
+	volume = {283},
+	issn = {0962-8452, 1471-2954},
+	url = {https://royalsocietypublishing.org/doi/10.1098/rspb.2016.0456},
+	doi = {10.1098/rspb.2016.0456},
+	abstract = {The green wave hypothesis ({GWH}) states that migrating animals should track or ‘surf’ high-quality forage at the leading edge of spring green-up. To index such high-quality forage, recent work proposed the instantaneous rate of green-up ({IRG}), i.e. rate of change in the normalized difference vegetation index over time. Despite this important advancement, no study has tested the assumption that herbivores select habitat patches at peak {IRG}. We evaluated this assumption using step selection functions parametrized with movement data during the green-up period from two populations each of bighorn sheep, mule deer, elk, moose and bison, totalling 463 individuals monitored 1–3 years from 2004 to 2014. Accounting for variables that typically influence habitat selection for each species, we found seven of 10 populations selected patches exhibiting high {IRG}—supporting the {GWH}. Nonetheless, large herbivores selected for the leading edge, trailing edge and crest of the {IRG} wave, indicating that other mechanisms (e.g. ruminant physiology) or measurement error inherent with satellite data affect selection for {IRG}. Our evaluation indicates that {IRG} is a useful tool for linking herbivore movement with plant phenology, paving the way for significant advancements in understanding how animals track resource quality that varies both spatially and temporally.},
+	pages = {20160456},
+	number = {1833},
+	journaltitle = {Proceedings of the Royal Society B: Biological Sciences},
+	shortjournal = {Proc. R. Soc. B.},
+	author = {Merkle, Jerod A. and Monteith, Kevin L. and Aikens, Ellen O. and Hayes, Matthew M. and Hersey, Kent R. and Middleton, Arthur D. and Oates, Brendan A. and Sawyer, Hall and Scurlock, Brandon M. and Kauffman, Matthew J.},
+	urldate = {2024-02-14},
+	date = {2016-06-29},
+	langid = {english},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\FEKFUKV3\\Merkle et al. - 2016 - Large herbivores surf waves of green-up during spr.pdf:application/pdf},
+}
+
+@article{gautam_ndvi_2019,
+	title = {{NDVI} is not reliable as a surrogate of forage abundance for a large herbivore in tropical forest habitat},
+	volume = {51},
+	issn = {0006-3606, 1744-7429},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/btp.12651},
+	doi = {10.1111/btp.12651},
+	abstract = {Abstract
+            
+              Remotely sensed vegetation indices are increasingly being used in wildlife studies but field‐based support for their utility as a measure of forage availability comes largely from open‐canopy habitats. We assessed whether normalized difference vegetation index (
+              {NDVI}
+              ) represents forage availability for Asian elephants in a southern Indian tropical forest. We found that the number of food species was a small percentage of all plant species.
+              {NDVI}
+              was not a good measure of food abundance in any vegetation category partly because of (a) small to moderate proportional abundances of food species relative to the total abundance of all species in that category (herbs and shrubs), (b) abundant overstory vegetation resulting in low correlations between
+              {NDVI}
+              and food abundance, despite a high proportional abundance of food species and a concordance between total abundance and food species abundance (graminoids), and (c) the relevant variables measured and important as food at the ground level (count and
+              {GBH}
+              ) not being related to primary productivity (trees and recruits).
+              {NDVI}
+              had a negative relationship with the total abundance of graminoids, which represent a bulk of elephant and other herbivore diet, because of negative interaction with other vegetation and canopy cover that positively explained
+              {NDVI}
+              . Spatially interpolated total graminoid abundance modeled from field data outperformed
+              {NDVI}
+              in predicting total graminoid abundance, although interpolation models of food graminoid abundance were not satisfactory. Our results reject the utility of
+              {NDVI}
+              in mapping elephant forage abundance in tropical forests, a finding that has implications for studies of other herbivores also.
+            
+            Abstract in Kannada is available with online material.
+          , 
+            ಅಮೂರ್ತ
+            ವನ್ಯಜೀವಿಗಳ ಅಧ್ಯಯನದಲ್ಲಿ, ದೂರಸಂವೇದಿ ತಂತ್ರಗಳಿಂದ ಗಣಿಸಿದ ’ಸಸ್ಯರಾಶಿಸೂಚ್ಯಂಕ’ಗಳನ್ನು (vegetation indices) ಹೆಚ್ಚೆಚ್ಚು ಬಳಸಲಾಗುತ್ತಿದೆ. ಆಹಾರದ ಲಭ್ಯತೆಯನ್ನು ಅಳೆಯುವಲ್ಲಿ ಇದರ ಉಪಯುಕ್ತತೆಗೆ ಅಗತ್ಯವಿರುವ ಕ್ಷೇತ್ರಾಧ್ಯಯನದ ಬೆಂಬಲವು ಬಹುತೇಕ ತೆರೆದ ಛಾವಣಿಯ (open‐canopy) ಅರಣ್ಯಪ್ರದೇಶಗಳ ಅಧ್ಯಯನಗಳಿಂದ ಬರುತ್ತದೆ. ದೂರಸಂವೇದಿ ತಂತ್ರಗಳಲ್ಲಿ ಬಳಸುವ ಸಾಧಾರಣೀಕರಿಸಿದ ಸಸ್ಯರಾಶಿವ್ಯತ್ಯಾಸದ ಸೂಚ್ಯಂಕ (normalized difference vegetation index ‐ {NDVI})ವು, ದಕ್ಷಿಣ ಭಾರತದ ಉಷ್ಣವಲಯದ ಕಾಡುಗಳಲ್ಲಿನ ಏಶಿಯಾದ ಆನೆಗಳ ಆಹಾರದ ಲಭ್ಯತೆಯನ್ನು ಸೂಚಿಸುತ್ತದೆಯೋ ಎಂಬುದನ್ನಿಲ್ಲಿ ನಾವು ಪರೀಕ್ಷಿಸಿದೆವು. ಆದರೆ ಒಟ್ಟಾರೆ ಇರುವ ಸಸ್ಯಪ್ರಭೇದಗಳಲ್ಲಿ ಆಹಾರಪ್ರಭೇದಗಳ ಶೇಕಡಾವಾರು ಪ್ರಮಾಣ ಬಲು ಕಡಿಮೆ ಎಂದು ಕಂಡುಕೊಂಡೆವು. ಯಾವುದೇ ಸಸ್ಯಪ್ರಭೇದದಲ್ಲೂ ಆಹಾರ ಸಮೃದ್ಧಿಯ ಅಳತೆಯನ್ನು ಸರಿಯಾಗಿ ತಿಳಿಸಲು ಎನ್‌ ಡಿ ವಿ ಐ ಸಮರ್ಥವಿರಲಿಲ್ಲ. ಕೆಲಮಟ್ಟಿಗೆ ಇದಕ್ಕೆ ಕಾರಣವೇನೆಂದರೆ (ಎ) ಯಾವುದೇ ಸಸ್ಯಪ್ರಭೇದಲ್ಲಿಯೂ ಆಯಾ ಪ್ರಭೇದಗಳ ಒಟ್ಟಾರೆ ಸಮೃದ್ಧಿಗೆ ಹೋಲಿಸಿದರೆ ಆಹಾರ ಪ್ರಭೇದಗಳ ಪ್ರಮಾಣವು ತೀರ ಕಡಿಮೆ ಅಥವಾ ಮಧ್ಯಮ ಪ್ರಮಾಣದಲ್ಲಿರುವುದು (ಬಿ) ಆಹಾರ ಪ್ರಭೇದಗಳು ಸಮೃದ್ಧಿಯಾಗಿದ್ದಾಗಲೂ ಮೇಲ್ಛಾವಣಿಯ ಸಸ್ಯರಾಶಿಯ ಪ್ರಮಾಣ ಹೆಚ್ಚಿರುವುದರಿಂದಾಗಿ ಆಹಾರದ ಲಭ್ಯತೆ ಹಾಗೂ ಎನ್‌ಡಿ ವಿ ಐ ಸೂಚ್ಯಂಕಗಳ ನಡುವೆ ಹೊಂದಿಕೆ ಇಲ್ಲದಿರುವುದು, ಹಾಗೂ, ಗ್ರಾಮಿನಿಡೇ (ಹುಲ್ಲುಸಸ್ಯಗಳು) ವರ್ಗದ ಆಹಾರ ಪ್ರಭೇದಗಳು ಹಾಗೂ ಒಟ್ಟಾರೆ ಆಹಾರ ಸಸ್ಯಗಳ ಸಮೃದ್ಧಿಯಲ್ಲಿ ಹೆಚ್ಚು ಹೊಂದಿಕೆ ಇರುವುದು (ಸಿ) ನೆಲಮಟ್ಟದ ಪ್ರಮುಖ ಆಹಾರವನ್ನು ಅಳತೆ ಮಾಡಿದ ಅಂಶಗಳಿಗೂ (ಗಣತಿ ಹಾಗೂ ಜಿಬಿಎಚ್) ಮರಗಳನ್ನು ಬಳಸಿ ಅಳೆದ ಪ್ರಾಥಮಿಕ ಉತ್ಪಾದಕತೆಗೂ ಸಂಬಂಧವಿಲ್ಲದಿರುವುದು. ಆನೆಗಳು ಮತ್ತು ಇತರೆ ಸಸ್ಯಾಹಾರಿ ಪ್ರಾಣಿಗಳ ಪ್ರಧಾನ ಆಹಾರವಾಗಿರುವ ಗ್ರಾಮಿನೀ (ಹುಲ್ಲು) ಸಸ್ಯಗಳ ಒಟ್ಟಾರೆ ಸಮೃದ್ಧಿಗೆ ಮತ್ತು ಎನ್‌ಡಿ ವಿ ಐ ಗೆ ಋಣಾತ್ಮಕ ಸಂಬಂಧವಿದೆ. ಏಕೆಂದರೆ ಎನ್‌ಡಿ ವಿ ಐ ಯು ಧನಾತ್ಮಕವೆಂದು ಸೂಚಿಸುವ ಇತರೆ ಸಸ್ಯರಾಶಿ ಹಾಗೂ ಮೇಲ್ಛಾವಣಿಯ ಸಸ್ಯರಾಶಿಯ ಜೊತೆಗೆ ಹುಲ್ಲು ಸಸ್ಯಗಳ ಸಂಬಂಧವು ಋಣಾತ್ಮಕ. ಕ್ಷೇತ್ರಾಧ್ಯಯನದ ವೇಳೆ ಹುಲ್ಲು ಬೆಳೆಯುವ ಜಾಗೆಯನ್ನೆಲ್ಲ ಜೋಡಿಸಿ ಗಣಿಸಿದಾಗ ‐ ಈ ಬಗೆಯ ಗಣನೆಯು ತೃಪ್ತಿಕರವಲ್ಲದಿದ್ದರೂ ‐ ಗ್ರಾಮಿನೀ ಸಸ್ಯಗಳ ಸಮೃದ್ಧಿಯು ಎನ್‌ಡಿ ವಿ ಐ ಸೂಚಿಸಿದ ಪ್ರಮಾಣವನ್ನು ಮೀರಿತ್ತು. ಹೀಗೆ ನಮ್ಮ ಅಧ್ಯಯನದ ಫಲಿತಾಂಶಗಳು ಆನೆಯ ಆಹಾರದ ಸಮೃದ್ಧಿಯ ನಕ್ಷೆಯನ್ನು ರೂಪಿಸುವಲ್ಲಿ ಎನ್‌ಡಿ ವಿ ಐನ ಉಪಯುಕ್ತತೆಯನ್ನು ತಿರಸ್ಕರಿಸುತ್ತವೆ. ಈ ಫಲಿತಾಂಶವು ಇತರೆ ಸಸ್ಯಾಹಾರಿ ಪ್ರಾಣಿಗಳ ಸಂದರ್ಭದಲ್ಲಿಯೂ ಪ್ರಸ್ತುತವಾಗಬಹುದು.},
+	pages = {443--456},
+	number = {3},
+	journaltitle = {Biotropica},
+	shortjournal = {Biotropica},
+	author = {Gautam, Hansraj and Arulmalar, Evangeline and Kulkarni, Mihir R. and Vidya, T. N. C.},
+	urldate = {2024-02-14},
+	date = {2019-05},
+	langid = {english},
+}
+
+@article{phillips_evaluating_2008,
+	title = {Evaluating the species energy relationship with the newest measures of ecosystem energy: {NDVI} versus {MODIS} primary production},
+	volume = {112},
+	issn = {00344257},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0034425708002460},
+	doi = {10.1016/j.rse.2008.08.002},
+	shorttitle = {Evaluating the species energy relationship with the newest measures of ecosystem energy},
+	pages = {4381--4392},
+	number = {12},
+	journaltitle = {Remote Sensing of Environment},
+	shortjournal = {Remote Sensing of Environment},
+	author = {Phillips, Linda B. and Hansen, Andrew J. and Flather, Curtis H.},
+	urldate = {2024-02-14},
+	date = {2008-12},
+	langid = {english},
+}
+
+@article{tian_evaluating_2015,
+	title = {Evaluating temporal consistency of long-term global {NDVI} datasets for trend analysis},
+	volume = {163},
+	issn = {00344257},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0034425715001285},
+	doi = {10.1016/j.rse.2015.03.031},
+	pages = {326--340},
+	journaltitle = {Remote Sensing of Environment},
+	shortjournal = {Remote Sensing of Environment},
+	author = {Tian, Feng and Fensholt, Rasmus and Verbesselt, Jan and Grogan, Kenneth and Horion, Stephanie and Wang, Yunjia},
+	urldate = {2024-02-14},
+	date = {2015-06},
+	langid = {english},
+}
+
+@article{huang_commentary_2021,
+	title = {A commentary review on the use of normalized difference vegetation index ({NDVI}) in the era of popular remote sensing},
+	volume = {32},
+	issn = {1007-662X, 1993-0607},
+	url = {https://link.springer.com/10.1007/s11676-020-01155-1},
+	doi = {10.1007/s11676-020-01155-1},
+	abstract = {Abstract
+            The Normalized Difference Vegetation Index ({NDVI}), one of the earliest remote sensing analytical products used to simplify the complexities of multi-spectral imagery, is now the most popular index used for vegetation assessment. This popularity and widespread use relate to how an {NDVI} can be calculated with any multispectral sensor with a visible and a near-{IR} band. Increasingly low costs and weights of multispectral sensors mean they can be mounted on satellite, aerial, and increasingly—Unmanned Aerial Systems ({UAS}). While studies have found that the {NDVI} is effective for expressing vegetation status and quantified vegetation attributes, its widespread use and popularity, especially in {UAS} applications, carry inherent risks of misuse with end users who received little to no remote sensing education. This article summarizes the progress of {NDVI} acquisition, highlights the areas of {NDVI} application, and addresses the critical problems and considerations in using {NDVI}. Detailed discussion mainly covers three aspects: atmospheric effect, saturation phenomenon, and sensor factors. The use of {NDVI} can be highly effective as long as its limitations and capabilities are understood. This consideration is particularly important to the {UAS} user community.},
+	pages = {1--6},
+	number = {1},
+	journaltitle = {Journal of Forestry Research},
+	shortjournal = {J. For. Res.},
+	author = {Huang, Sha and Tang, Lina and Hupy, Joseph P. and Wang, Yang and Shao, Guofan},
+	urldate = {2024-02-14},
+	date = {2021-02},
+	langid = {english},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\DB9AJQW8\\Huang et al. - 2021 - A commentary review on the use of normalized diffe.pdf:application/pdf},
+}
+
+@article{fan_global_2016,
+	title = {A global study of {NDVI} difference among moderate-resolution satellite sensors},
+	volume = {121},
+	issn = {09242716},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0924271616303975},
+	doi = {10.1016/j.isprsjprs.2016.09.008},
+	pages = {177--191},
+	journaltitle = {{ISPRS} Journal of Photogrammetry and Remote Sensing},
+	shortjournal = {{ISPRS} Journal of Photogrammetry and Remote Sensing},
+	author = {Fan, Xingwang and Liu, Yuanbo},
+	urldate = {2024-02-14},
+	date = {2016-11},
+	langid = {english},
+}
+
+@article{wang_stochastic_2019,
+	title = {Stochastic simulations reveal few green wave surfing populations among spring migrating herbivorous waterfowl},
+	volume = {10},
+	issn = {2041-1723},
+	url = {https://www.nature.com/articles/s41467-019-09971-8},
+	doi = {10.1038/s41467-019-09971-8},
+	abstract = {Abstract
+            Tracking seasonally changing resources is regarded as a widespread proximate mechanism underpinning animal migration. Migrating herbivores, for example, are hypothesized to track seasonal foliage dynamics over large spatial scales. Previous investigations of this green wave hypothesis involved few species and limited geographical extent, and used conventional correlation that cannot disentangle alternative correlated effects. Here, we introduce stochastic simulations to test this hypothesis using 222 individual spring migration episodes of 14 populations of ten species of geese, swans and dabbling ducks throughout Europe, East Asia, and North America. We find that the green wave cannot be considered a ubiquitous driver of herbivorous waterfowl spring migration, as it explains observed migration patterns of only a few grazing populations in specific regions. We suggest that ecological barriers and particularly human disturbance likely constrain the capacity of herbivorous waterfowl to track the green wave in some regions, highlighting key challenges in conserving migratory birds.},
+	pages = {2187},
+	number = {1},
+	journaltitle = {Nature Communications},
+	shortjournal = {Nat Commun},
+	author = {Wang, Xin and Cao, Lei and Fox, Anthony D. and Fuller, Richard and Griffin, Larry and Mitchell, Carl and Zhao, Yunlin and Moon, Oun-Kyong and Cabot, David and Xu, Zhenggang and Batbayar, Nyambayar and Kölzsch, Andrea and Van Der Jeugd, Henk P. and Madsen, Jesper and Chen, Liding and Nathan, Ran},
+	urldate = {2024-02-14},
+	date = {2019-05-16},
+	langid = {english},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\KVCTM7BL\\Wang et al. - 2019 - Stochastic simulations reveal few green wave surfi.pdf:application/pdf},
+}
